Add java 17 preview image (#1211)